# gunicorn_uvicorn_fastapi_sse

./: .gitignore  .gitmessage  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  commitlint.config.js  comprehensive_performance_analysis.md  container_inspect.py  coverage_summary.md  coverage_visualization_guide.md  docker-compose.yml  gunicorn.conf.py  package-lock.json  package.json  performance_analysis_report.md  prometheus.yml  pyproject.toml  ramp_up_test.py  requirements.txt  start.sh  test_client_metrics.py  view_coverage.py
.claude/: settings.local.json
.github/workflows/: branch-management.yml  branch-protection.yml  pr-validation.yml
docs/: git-branch-standards.md  git-commit-standards.md  git-quick-reference.md  git-troubleshooting.md  git-workflow-guide.md
scripts/: branch-cleanup.py  branch-report.py  install-git-hooks.py  validate-branch-name.py
src/app/: __init__.py  chatbot.py  config.py  conversation_manager.py  logger.py  main.py  models.py
src/load_test/: __init__.py  client.py  ramp_up_test.py  simple_client.py
src/load_test/scripts/: run_load_test.py
src/tests/: __init__.py  test_chatbot.py  test_conversation_manager.py  test_load_test.py  test_main.py  test_models.py
